--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
           integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
           referrerpolicy="no-referrer" rel="stylesheet"/>
-    <title>ChitChat</title>
+    <title>Chit-Chat</title>
 </head>
 <body>
 <div id="root"></div>
